--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -39,7 +39,7 @@
                         <id>antlr</id>
                         <configuration>
                             <libDirectory>src/main/antlr4/imports/</libDirectory>
-                            <listener>true</listener>
+                            <listener>false</listener>
                             <visitor>true</visitor>
                         </configuration>
                         <goals>
